--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
+    "fetch-mock": "^9.3.1",
     "mocha": "^7.1.1",
+    "node-fetch": "^2.6.0",
+    "sinon": "^9.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
